Closed
Bug 212145
Opened 23 years ago
Closed 23 years ago
[FIXr]Generated content with overflow:auto; declared fails
Categories
(Core :: CSS Parsing and Computation, defect, P2)
Core
CSS Parsing and Computation
Tracking
()
VERIFIED
FIXED
mozilla1.5beta
People
(Reporter: annevk, Assigned: bzbarsky)
References
Details
Attachments
(1 file)
|
1.58 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5a) Gecko/20030707
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5a) Gecko/20030707
Testcase
http://www.annevankesteren.nl/css/testcase/generated_content.html
Mozilla doens't show the generated content and applies the text-transform on the
wrong letter which is a direct result of the first.
Reproducible: Always
Steps to Reproduce:
Actual Results:
Mozilla renders the code with most of the style applied. The first letter of the
code is transferred to uppercase. There isn't any generated content.
Expected Results:
There should be a block-level element with in it: "The value of the class from
the element code", followed by a "space" and then "code:". The first letter of
the classname should be in uppercase. Then there should be a linebreak and then
comes the content of the element code.
| Assignee | ||
Comment 1•23 years ago
|
||
So the problem seems to be that in ConstructFrameByDisplayType the
IsScrollable(aPresContext, aDisplay) case passes PR_FALSE for the
aCanHaveGeneratedContent param of ProcessChildren when calling ProcessChildren
with the scrolled frame as a parent.
Changing that to PR_TRUE makes the testcase render correctly, modulo the
::before/::first-letter problem...
Is there a good reason that param is PR_FALSE? The cvs blame for this line is
something back in 1999, and drilling back in cvs revision history did not give
me any insight into why it was written this way.
I doubt it.
| Assignee | ||
Comment 3•23 years ago
|
||
| Assignee | ||
Updated•23 years ago
|
Attachment #127397 -
Flags: superreview?(roc+moz)
Attachment #127397 -
Flags: review?(roc+moz)
| Assignee | ||
Comment 4•23 years ago
|
||
.
Assignee: dbaron → bzbarsky
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → All
Priority: -- → P2
Hardware: PC → All
Target Milestone: --- → mozilla1.5beta
| Assignee | ||
Updated•23 years ago
|
Summary: Generated content with overflow:auto; declared fails → [FIX]Generated content with overflow:auto; declared fails
Attachment #127397 -
Flags: superreview?(roc+moz)
Attachment #127397 -
Flags: superreview+
Attachment #127397 -
Flags: review?(roc+moz)
Attachment #127397 -
Flags: review+
| Assignee | ||
Updated•23 years ago
|
Summary: [FIX]Generated content with overflow:auto; declared fails → [FIXr]Generated content with overflow:auto; declared fails
| Assignee | ||
Comment 5•23 years ago
|
||
Fixed for 1.5b.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 6•23 years ago
|
||
The content is now generated in my testcase, however the first-letter is not
turned into uppercase. That's why I reopend the bug.
UA: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b) Gecko/20030726
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 7•23 years ago
|
||
One issue per bug, please. Please file a separate bug and cc me on it, ok?
Status: REOPENED → RESOLVED
Closed: 23 years ago → 23 years ago
Resolution: --- → FIXED
The other bug is bug 214004.
*** Bug 217868 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•