Make it possible for overflow:auto/overflow:scroll frames to have ::before/::after content.  Bug 212145, r+sr=roc+moz